--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "encode-fe-spec",
+  "name": "wly574523605-fe-spec",
   "private": true,
-  "description": "印客学院--前端编码规范工程化",
+  "description": "wly574523605--前端编码规范工程化",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
@@ -16,10 +16,10 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "keywords": [
-    "encode",
+    "wly574523605",
     "fe spec"
   ],
-  "author": "chenghuai",
+  "author": "wly574523605",
   "license": "ISC",
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
