feat(change): change configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-	"cSpell.words": ["chenghuai", "commitlint", "stylelint", "vuepress"],
-	"git.ignoreLimitWarning": true
+	"cSpell.words": ["wly", "commitlint", "stylelint", "vuepress"],
+  "git.ignoreLimitWarning": true
 }
