feat(add): add plugin

--- a/packages/wly-fe-lint/package.json
+++ b/packages/wly-fe-lint/package.json
@@ -19,7 +19,7 @@
     "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
   },
   "keywords": [
-    "encode",
+    "wly574523605",
     "lint",
     "cli"
   ],
